--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>Photo App Test</title>
 		<link
 			rel="stylesheet"
-			href="https://bootswatch.com/4/pulse/bootstrap.min.css" />
+			href="https://bootswatch.com/4/flatly/bootstrap.min.css" />
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
